<resources>
    <string name="app_name">Movies Application</string>
    <string name="budget">Budget:</string>
    <string name="status">Status:</string>
    <string name="countries">Countries:</string>
    <string name="genres">Genres:</string>
    <string name="save_to_favourites">Add to Favourites</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview:</string>
    <string name="go_to_saved">To saved movies</string>
    <string name="recent_movies">Recent movies</string>
    <string name="saved_movies">Saved Movies</string>
    <string name="to_recent_movies">To recent movies</string>
</resources>
