<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.movie_details.MovieDetailsFragment">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/titleTxt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:maxHeight="88dp"
            android:maxWidth="88dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTxt"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/overviewTxt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"


            app:layout_constraintStart_toStartOf="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/voteTxt"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/titleTxt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/taglineTxt" app:layout_constraintStart_toStartOf="@+id/titleTxt"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/budgetTxt" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView"/>
    <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statusTxt"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/save_to_favourites"
            android:textSize="22sp"
            android:textColor="@drawable/save_btn_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/overviewTxt" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/taglineTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt" app:layout_constraintStart_toStartOf="@+id/titleTxt"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/releaseTxt"
            app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/overview"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="@+id/imageView"
    />
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"
            android:visibility="gone"
    />

</androidx.constraintlayout.widget.ConstraintLayout>